--- a/examples/index.html
+++ b/examples/index.html
@@ -22,6 +22,7 @@
 	<ul class="list-group py-3">
 		<li class="list-group-item"><a href="form.html">Form</a></li>
 		<li class="list-group-item"><a href="form-slow-response.html">Form with slow response</a></li>
+        <li class="list-group-item"><a href="form-avalynx-select.html">Form with AvalynxSelect</a></li>
 	</ul>
 
 	<a href="https://github.com/avalynx/avalynx-form" target="_blank" class="btn btn-primary">AvalynxForm on GitHub</a> <a href="https://github.com/avalynx/" target="_blank" class="btn btn-primary">Avalynx on GitHub</a>
