--- a/examples/form.html
+++ b/examples/form.html
@@ -16,8 +16,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9/build/styles/stackoverflow-light.min.css" id="hljsTheme">
     <script>hljs.highlightAll();</script>
 
-    <!-- AvalynxForm 1.0.2 -->
-    <script src="https://cdn.jsdelivr.net/npm/avalynx-form@1.0.2/dist/js/avalynx-form.min.js"></script>
+    <!-- AvalynxForm -->
+    <script src="../src/js/avalynx-form.js"></script>
 
     <!-- Example helper -->
     <link href="./css/helper.css" rel="stylesheet">
