Add AvalynxAutocomplete and AvalynxSelect components, update examples, and switch to English locale
- Introduced `AvalynxAutocomplete` and `AvalynxSelect` components with customizable options and Bootstrap 5.3+ compatibility.
- Updated examples with new autocomplete and select form integrations.
- Changed HTML examples language to English for consistency.

--- a/examples/form-avalynx-select.html
+++ b/examples/form-avalynx-select.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-bs-theme="auto">
+<html lang="en" data-bs-theme="auto">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
     <script src="../src/js/avalynx-form.js"></script>
 
     <!-- AvalynxSelect 1.1.0 -->
-    <script src="https://cdn.jsdelivr.net/npm/avalynx-select@1.1.0/dist/js/avalynx-select.min.js"></script>
+    <script src="./js/avalynx-select.js"></script>
 
     <!-- Example helper -->
     <link href="./css/helper.css" rel="stylesheet">
