--- a/examples/index.html
+++ b/examples/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de" data-bs-theme="auto">
+<html lang="en" data-bs-theme="auto">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +23,7 @@
 		<li class="list-group-item"><a href="form.html">Form</a></li>
 		<li class="list-group-item"><a href="form-slow-response.html">Form with slow response</a></li>
         <li class="list-group-item"><a href="form-avalynx-select.html">Form with AvalynxSelect</a></li>
+        <li class="list-group-item"><a href="form-avalynx-autocomplete.html">Form with AvalynxAutocomplete</a></li>
 	</ul>
 
 	<a href="https://github.com/avalynx/avalynx-form" target="_blank" class="btn btn-primary">AvalynxForm on GitHub</a> <a href="https://github.com/avalynx/" target="_blank" class="btn btn-primary">Avalynx on GitHub</a>
