--- a/examples/form-avalynx-autocomplete.html
+++ b/examples/form-avalynx-autocomplete.html
@@ -73,13 +73,13 @@
 
         <div class="form-group mb-3">
             <label class="form-label" for="customer_firstname">First Name:</label>
-            <input type="text" name="customer_firstname" id="customer_firstname" class="form-control" value="John"/>
+            <input type="text" name="customer_firstname" id="customer_firstname" class="form-control" value=""/>
             <span class="invalid-feedback"></span>
         </div>
 
         <div class="form-group mb-3">
             <label class="form-label" for="customer_lastname">Last Name:</label>
-            <input type="text" name="customer_lastname" id="customer_lastname" class="form-control" value="Doe"/>
+            <input type="text" name="customer_lastname" id="customer_lastname" class="form-control" value=""/>
             <span class="invalid-feedback"></span>
         </div>
 
